--- a/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
+++ b/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
@@ -1,4 +1,4 @@
-<SceneObjectView xmlns="Delight" BasedOn="View" LoadMode="t:LoadMode" GameObject="t:GameObject" EnableScriptEvents="t:bool"
+<SceneObjectView xmlns="Delight" BasedOn="View" GameObject="t:GameObject" EnableScriptEvents="t:bool"
            BeginDrag="t:Action"
            Cancel="t:Action"
            Click="t:Action"
@@ -8,13 +8,13 @@
            EndDrag="t:Action"
            InitializePotentialDrag="t:Action"
            Move="t:Action"
-           PointerDown="t:Action"
-           PointerEnter="t:Action"
-           PointerExit="t:Action"
-           PointerUp="t:Action"
+           MouseDown="t:Action"
+           MouseEnter="t:Action"
+           MouseExit="t:Action"
+           MouseUp="t:Action"
            Scroll="t:Action"
            Select="t:Action"
            Submit="t:Action"
-           UpdateSelected="t:Action"           
+           UpdateSelected="t:Action"            
            > 
 </SceneObjectView> 
