--- a/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
+++ b/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
@@ -18,7 +18,7 @@
            Select="t:Action"
            Submit="t:Action"
            UpdateSelected="t:Action"
-           >
+           HideInDesigner="True">
 </SceneObjectView>
 
 <!-- 
