--- a/UnityProject/Delight/Assets/Delight/Content/Views/View.xml
+++ b/UnityProject/Delight/Assets/Delight/Content/Views/View.xml
@@ -1,3 +1,3 @@
 <View xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd"
-      LoadMode="t:LoadMode">
+      LoadMode="t:LoadMode" HideInDesigner="True">
 </View> 
