--- a/UnityProject/Delight/Assets/TestContent/Views/GroupExamples.xml
+++ b/UnityProject/Delight/Assets/TestContent/Views/GroupExamples.xml
@@ -1,26 +1,10 @@
-<GroupExamples xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd"
-               IsActive1="t:bool" IsActive2="t:bool" TestWidth="t:ElementSize = 0">
-  
-  <List Id="PlayerList" Items="{player in @Players}" Width="{TestWidth}" Height="{TestWidth}" BackgroundColor="Green" Spacing="5"
-        IsScrollable="False" DisableInteractionScrollDelta="4" Orientation="Horizontal" Overflow="Wrap"
-        CanScrollHorizontally="False"
-        CanScrollVertically="False" 
-        ContentAlignment="Right" 
-        DeselectAfterSelect="True"
-        HorizontalScrollbarVisibility="Remove" 
-        ItemSelected="AttackModifierSelected"
-        Scale="1,1,1" 
-        ScrollableContentAlignment="Top"
-        Style="Generic_HorizontalListScrolling" 
-        VerticalScrollbarVisibility="Remove"        
-        >
-    <ListItem Width="120" Height="100" BackgroundColor="Blue">
-      <!--<Region BackgroundColor="Blue" Width="100" Height="20" />-->
-      <!--<ListItem BackgroundColor="Blue" Width="100" Height="20" />-->
-      <Label Id="ButtonTest" Text="{player.Name}" Width="100" />
+<GroupExamples xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd">
+
+  <List Id="PlayerList" Items="{player in @Players}" Width="425" Height="500" BackgroundColor="Green" Spacing="5"
+        IsScrollable="True" DisableInteractionScrollDelta="4">
+    <ListItem Width="100" Height="20">
+      <Button Id="ButtonTest" Text="{player.Name}" Width="100" Height="20" />
     </ListItem>
   </List>
 
-  <Button Text="SetWidth" Alignment="TopLeft" Offset="10,10,0,0" Click="SetWidth" />
-  
 </GroupExamples>
