--- a/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/GridExample.xml
+++ b/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/GridExample.xml
@@ -1,5 +1,5 @@
 <GridExample xmlns="Delight" BasedOn="LayoutRoot">
-  <Grid Rows="200[20],200[20],200[20]" Columns="200[20],200[20],200[20]" Width="600" Height="600"> 
+  <Grid Rows="200[20],*[20],200[20]" Columns="200[20],*[20],200[20]" Width="600" Height="600"> 
     <Region Id="Cell00" Grid.Cell="0,0" BackgroundColor="#5389e0" />
     <Region Id="Cell01" Grid.Cell="0,1" BackgroundColor="#e375f9" />
     <Region Id="Cell02" Grid.Cell="0,2" BackgroundColor="#74f9d5" />
