--- a/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/Aa.xml
+++ b/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/Aa.xml
@@ -1,3 +1,7 @@
 <Aa xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd">
-  <TitleView Title="Test title" />
+  <Group>
+    <Label Text="{@TestBinding1}" />
+    <Label Text="{@Player1.Name}" />
+  </Group>
+  <!--<TitleView Title="Test title" />-->
 </Aa> 
