--- a/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ModelBindingTest.xml
+++ b/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ModelBindingTest.xml
@@ -1,17 +1,17 @@
-<ModelBindingTest xmlns="Delight" BasedOn="LayoutRoot" SomeParentProperty="t:string">
+<ModelBindingTest xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot" SomeParentProperty="t:string">
   <Group Orientation="Horizontal" Spacing="10">
     <Group Spacing="10" Width="100">
-      <Button Text="Test 1" Click="Test1" />
-      <Button Text="Add" Click="Add" />
-      <Button Text="Remove" Click="Remove" />
-      <Label Text="{@Loc.Greeting1}" /> 
+      <Button Text="Test 1" Click="Test1" Width="100%" />
+      <Button Text="Add" Click="Add" Width="100%" />
+      <Button Text="Remove" Click="Remove" Width="100%" />
+      <Label Text="{@Loc.Greeting1}" />  
       <Label Text="{@Loc.Greeting2}" />
     </Group>
 
-    <List Id="PlayerList" Items="{player in @Players}" Width="500" Height="500" BackgroundColor="Green" Spacing="5" IsScrollable="True">
+    <List Id="PlayerList" Items="{player in @Players}" Width="200" Height="500" BackgroundColor="White" Spacing="5" IsScrollable="True">
       <Group>
         <Label Text="{player.Name}" />
-        <List Id="AchievementsList" Items="{achievement in player.Achievements}" IsVirtualized="True" Orientation="Vertical" Offset="50,0,0,0" ItemSelected="AchievementSelectionChanged" Height="200">
+        <List Id="AchievementsList" Items="{achievement in player.Achievements}" Orientation="Vertical" Offset="50,0,0,0" ItemSelected="AchievementSelectionChanged">
           <Label Text="{achievement.Title}" Width="150" Height="40" />    
         </List>   
       </Group>  
