--- a/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ListExample.xml
+++ b/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ListExample.xml
@@ -1,14 +1,14 @@
-<ListExample BasedOn="LayoutRoot" xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../../Delight.xsd"
+<ListExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot"
              Players="t:BindableCollection[Player]" ItemIndex="t:string" SelectedPlayer="t:Player">
   <Group Orientation="Horizontal" Spacing="10">
     <Group Spacing="10" Width="200">
       <InputField Text="{ItemIndex}" Width="200" />
       <Button Text="Select" Click="SelectItem" Width="200" />
       <Button Text="ScrollTo" Click="ScrollTo" Width="200" />
-      <Button Text="ScrollToSelected" Click="ScrollToSelected" Width="200" Margin="0,5,0,0" />
-      <Button Text="Add" Click="AddItem" Width="200" Margin="0,5,0,0" />
-      <Button Text="Insert" Click="InsertItem" Width="200" Margin="0,5,0,0" />
-      <Button Text="Remove" Click="RemoveItem" Width="200" Margin="0,5,0,0" />      
+      <Button Text="ScrollToSelected" Click="ScrollToSelected" Width="200"  />
+      <Button Text="Add" Click="AddItem" Width="200" />
+      <Button Text="Insert" Click="InsertItem" Width="200" />
+      <Button Text="Remove" Click="RemoveItem" Width="200" />      
     </Group> 
 
     <List Id="PlayerList" Items="{player in Players}" Width="425" Height="500" BackgroundColor="Green" Spacing="5" 
