--- a/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ModelBindingTest.xml
+++ b/UnityProject/Delight/Assets/DelightExtensions/Experiments/Views/ModelBindingTest.xml
@@ -1,4 +1,5 @@
-<ModelBindingTest xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot" SomeParentProperty="t:string">
+<ModelBindingTest xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot" 
+                  SomeParentProperty="t:string">
   <Group Orientation="Horizontal" Spacing="10">
     <Group Spacing="10" Width="100">
       <Button Text="Test 1" Click="Test1" Width="100%" />
