Tooltip in designer

--- a/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
+++ b/UnityProject/Delight/Assets/Delight/Content/Views/SceneObjectView.xml
@@ -17,8 +17,7 @@
            Scroll="t:Action"
            Select="t:Action"
            Submit="t:Action"
-           UpdateSelected="t:Action"
-           HideInDesigner="True">
+           UpdateSelected="t:Action">
 </SceneObjectView>
 
 <!-- 
