--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/LevelSelectExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/LevelSelectExample.xml
@@ -2,7 +2,7 @@
   <Image Sprite="LevelSelectBg" PreserveAspect="True" Width="600" />
   <Label Text="Level Select" AutoSize="True" FontSize="50" Offset="0,0,0,225" FontColor="White" Font="AveriaSansLibre-Bold SDF" />
   <List Items="{level in @Levels}" Overflow="Wrap" Orientation="Horizontal" Width="500" Spacing="10"
-        Offset="10,180,0,0" DeselectAfterSelect="True" Alignment="Top">
+        Offset="10,180,0,0" DeselectAfterSelect="True" Alignment="Top" IsPaged="True" ItemsPerPage="6">
     <ListItem Size="150,150" BackgroundColor="White" BackgroundSprite="LevelSelectItemBg">
       <Label Text="{level.Index:0}" FontSize="50" AutoSize="True" Font="AveriaSansLibre-Bold SDF"
              FontColor="#ecce2d" Offset="0,0,0,30" />
