--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/LevelSelectExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/LevelSelectExample.xml
@@ -2,7 +2,10 @@
   <Image Sprite="LevelSelectBg" PreserveAspect="True" Width="600" />
   <Label Text="Level Select" AutoSize="True" FontSize="50" Offset="0,0,0,225" FontColor="White" Font="AveriaSansLibre-Bold SDF" />
   <List Items="{level in @Levels}" Overflow="Wrap" Orientation="Horizontal" Width="470" Height="310" Spacing="10"
-        Offset="0,180,0,0" DeselectAfterSelect="True" Alignment="Top" IsPaged="True" ItemsPerPage="6">
+        Offset="0,170,0,0" DeselectAfterSelect="True" Alignment="Top" IsPaged="True" ItemsPerPage="6"
+        ShowNavigationButtons="All"
+        PageNavigationGroupOffset="0,50,0,0"
+        PageNavigationGroupSpacing="5">
     <ListItem Size="150,150" BackgroundColor="White" BackgroundSprite="LevelSelectItemBg">
       <Label Text="{level.Index:0}" FontSize="50" AutoSize="True" Font="AveriaSansLibre-Bold SDF"
              FontColor="#ecce2d" Offset="0,0,0,30" />
@@ -11,5 +14,8 @@
     <NavigationButton BackgroundSprite="LevelSelectRightArrow" BackgroundColor="#bbbbbb" Highlighted-BackgroundColor="White"
                       Pressed-BackgroundColor="#bbbbbb"
                       Width="50" Height="77" Offset="110,0,0,10" />
+    <NavigationButton BackgroundSprite="LevelSelectPageButton" Pressed-BackgroundSprite="LevelSelectPageButtonPressed" BackgroundColor="#bbbbbb" Highlighted-BackgroundColor="White"
+                      Pressed-BackgroundColor="#bbbbbb" NavigationType="Page"
+                      Width="50" Height="50" DisplayLabel="False" />
   </List>
 </LevelSelectExample>
