--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/MainMenuExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/MainMenuExample.xml
@@ -1,8 +1,8 @@
-<MainMenuExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd">
+<MainMenuExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" Play="t:Action">
   <Image Sprite="MainMenuDemoBg" Height="480" PreserveAspect="True" />
   <Label Style="MainMenuDemoTitle" Text="Main Menu" Offset="0,0,0,210" />
   <Group Spacing="10" Offset="0,25,0,0">
-    <Button Style="MainMenuDemoButton" Text="Play" Click="Play" />
+    <Button Style="MainMenuDemoButton" Text="Play" Click="PlayClick" />
     <Button Style="MainMenuDemoButton" Text="Options" Click="ShowOptions" />
     <Button Style="MainMenuDemoButton" Text="Quit" Click="Quit" />
   </Group>
