Bugfix TMP example reference

--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/ButtonsExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/ButtonsExample.xml
@@ -29,5 +29,18 @@
     <ComboBox Id="ComboBox" Items="{player in @Players}" ItemSelected="ItemSelected" IsDropUp="False">
       <Label Text="{player.Name}" Width="100%" Margin="10,0,0,0" />
     </ComboBox>
+
+    <ComboBox Id="ComboBox" ItemSelected="ItemSelected" IsDropUp="False">
+      <ComboBoxListItem>
+        <Label Text="Option 1" Width="100%" Margin="10,0,0,0" />
+      </ComboBoxListItem>
+      <ComboBoxListItem>
+        <Label Text="Option 2" Width="100%" Margin="10,0,0,0" />
+      </ComboBoxListItem>
+      <ComboBoxListItem>
+        <Image Sprite="RainbowSquare" Alignment="Left" Offset="5,0,0,0" />
+        <Label Text="Option 3" Width="100%" Margin="30,0,0,0" />
+      </ComboBoxListItem>
+    </ComboBox>
   </Group>
 </ButtonsExample>
