Embedded code and references to list items in view action handlers

--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
@@ -2,7 +2,7 @@
 
   <Group> 
     <List Items="{level in @FilteredDemoLevels}" ItemSelected="OnItemSelected">
-      <ListItem>
+      <ListItem Click="$ Button1.Text = level.Name"> 
         <Label Text="$ {level.Name}" /> 
       </ListItem>
     </List>
