--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/EmbeddedExpressionsExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/EmbeddedExpressionsExample.xml
@@ -1,5 +1,5 @@
-<InlineCodeExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot"
-                   ClickCount="t:int">
+<EmbeddedExpressionsExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot"
+                            ClickCount="t:int">
 
   <Group Spacing="10">
     
@@ -32,4 +32,4 @@
 
   </Group>
 
-</InlineCodeExample>
+</EmbeddedExpressionsExample>
