--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
@@ -2,15 +2,17 @@
 
   <Group> 
     <List Items="{level in @FilteredDemoLevels}" ItemSelected="OnItemSelected">
-      <ListItem Click="$ Button1.Text = level.Name">
+      <ListItem Click="$ MyButton.Text = level.Name">
         <Group Orientation="Horizontal">
           <Label Text="$ {level.Name}" AutoSize="True" />
           <Label Text="$ Test2(40)" AutoSize="True" />
+          <Label Text="$ {{ string name = {level.Name}; return name + '!'; }}" />
+          <Button Text="$ {level.Index} + '. Test'" Click="$ {{ string name = level.Name; Test2(10); return; }}" />  
         </Group>
       </ListItem>
-    </List>
-    <Button Text="Test" Click="Test" />
-    <Label Text="$ Test2(10)" /> 
+    </List>  
+    <Button Id="MyButton" Text="Test" Click="Test" />
+    <Label Text="$ {{ string test = 'hello'; return test; }}" /> 
   </Group>
 
 </TestExample>
