--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
@@ -1,20 +1,24 @@
 <TestExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot"
-             Player="t:DemoPlayer = Player1">
+             Player="t:DemoPlayer = Player1" NonBindableLevel="t:NonBindableLevel">
 
-  <Group>
-    <List Items="{level in @FilteredDemoLevels}" ItemSelected="OnItemSelected">
-      <ListItem Click="$ MyButton.Text = level.Name">
-        <Group Orientation="Horizontal">
-          <Label Text="$ {level.Name}" AutoSize="True" />
-          <Label Text="$ Test2(40) " AutoSize="True" />
-          <Label Text="$ {{ string name = {level.Name}; return name + '!'; }}" />
-          <Button Text="$ {level.Index} + '. Test'" Click="$ {{ string name = level.Name; Test2(10); return; }}" />  
-        </Group>
-      </ListItem>
-    </List>  
+  <Group> 
+ 
     <Button Id="MyButton" Text="Test" Click="Test" />
     <Label Text="$ {{ string test = 'hello'; return test; }}" />
     <Label Text="{Player.Name}" />
-  </Group>
+    <Button Text="NonBindableTest" Click="NonBindableTest1" />
+    <Button Text="NonBindableTest 2" Click="NonBindableTest2" />
+    <Label Text="{NonBindableLevel.Name}" />
+
+    <List Items="{level2 in @NonBindableLevels}">
+      <ListItem Click="$ MyButton.Text = level2.Name">
+        <Group Orientation="Horizontal">
+          <Label Text="$ {level2.Name}" AutoSize="True" />
+          <Button Text="Add" Click="AddLevel(level2)" />
+          <Button Text="Remove" Click="RemoveLevel(level2)" />
+        </Group>
+      </ListItem>
+    </List>
+  </Group> 
 
 </TestExample>
