--- a/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
+++ b/UnityProject/Delight/Assets/Delight/Extensions/Examples/Views/TestExample.xml
@@ -1,12 +1,32 @@
 <TestExample xmlns="Delight" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="Delight ../Delight.xsd" BasedOn="LayoutRoot"
              Player="t:DemoPlayer = Player1" NonBindableLevel="t:NonBindableLevel">
+  
+  <Navigator>
+    <Region Navigator.Path="/" BackgroundColor="Blue">
+      <Label Text="/" />
+    </Region>
 
-  <Group>
+    <Region Navigator.Path="/test" BackgroundColor="Purple">
+      <Label Text="/test" />      
+    </Region>
+  </Navigator>
+  
+  <Group Spacing="5" Alignment="TopLeft" Orientation="Horizontal" Offset="20,0,0,0">
+    <Button Text="Open '/'" Click="$ Navigator.Push('/')" />
+    <Button Text="Open '/test'" Click="$ Navigator.Push('/test')" />
+    <Button Text="Back" Click="$ Navigator.Pop()" />
+  </Group>
+    
+      
+  
+  
+
+  <Group LoadMode="Manual">
     <List Items="{level in @FilteredDemoLevels}" ItemSelected="OnItemSelected">
       <ListItem Click="$ MyButton.Text = level.Name">
         <Group Orientation="Horizontal">
-          <Label Text="$ {level.Name}" AutoSize="True" />
-          <Label Text="$ Test2(40) " AutoSize="True" />
+          <Label Text="$ {level.Name}" />
+          <Label Text="$ Test2(40) " />
           <Label Text="$ {{ string name = {level.Name}; return name + '!'; }}" />
           <Button Text="$ {level.Index} + '. Test'" Click="$ {{ string name = level.Name; Test2(10); return; }}" />
         </Group>
@@ -23,11 +43,11 @@
       <ListItem Click="$ MyButton.Text = level2.Name">
         <Group Orientation="Horizontal">
           <Label Text="$ {level2.Name}" AutoSize="True" />
-          <Button Text="Add" Click="AddLevel(level2)" />
-          <Button Text="Remove" Click="RemoveLevel(level2)" />
+          <Button Text="Add" Click="AddLevel(level2)" Width="100" />
+          <Button Text="Remove" Click="RemoveLevel(level2)" Width="100" />
         </Group>
       </ListItem>
     </List>
-  </Group> 
+  </Group>
 
 </TestExample>
